<resources>
    <string name="app_name">Посчитайка</string>
    <string name="game_description">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо,чтобы сумма чисел из двух нижних фигур была равна  числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге чисо 7, водном из нижних знак вопроса, в другом число 4. Значит на месте вопросительного знака должно быть 3, потому что 3 + 4 = 7</string>
    <string name="understand">Понятно</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="level">Уровень %s</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Нормальный</string>
    <string name="hard_level">Тяжёлый</string>
    <string name="question_mark">\?</string>
    <string name="winner_result">Победа</string>
    <string name="won_result">Проигрыш</string>
    <string name="right_answers_with_min">Правильных ответов %d (минимум %d)</string>
    <string name="try_again">Попробовать снова</string>
    <string name="game_results">Результаты</string>
    <string name="require_right_answers">Необходимое количество правильных ответов: %d</string>
    <string name="right_answers">Количество правильных ответов: %d</string>
    <string name="need_right_answers_percent">Необходимый процент правильных ответов: %d</string>
    <string name="answers_percent">Процент правильных ответов: %d</string>
    <string name="plus_sign">+</string>
</resources>