<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_level"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTestLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/test_level" />

    <Button
        android:id="@+id/btnEasyLevel"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_level" />

    <Button
        android:id="@+id/btNormalLevel"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_level" />

    <Button
        android:id="@+id/btnHardLevel"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_level" />


</androidx.appcompat.widget.LinearLayoutCompat>