<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <TextView
        android:id="@+id/tvSum"
        style="@style/QuestionTextStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle_background"
        app:layout_constraintBottom_toTopOf="@+id/tvLeftNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="7" />

    <TextView
        android:id="@+id/tvQuestion"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:text="@string/question_mark"
        app:layout_constraintBottom_toBottomOf="@+id/tvLeftNum"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSign"
        app:layout_constraintTop_toTopOf="@+id/tvLeftNum" />

    <TextView
        android:id="@+id/tvLeftNum"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/tvOption2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tvSign"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSum"
        tools:text="3" />

    <TextView
        android:id="@+id/tvSign"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/plus_sign"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvLeftNum"
        app:layout_constraintEnd_toStartOf="@+id/tvQuestion"
        app:layout_constraintStart_toEndOf="@+id/tvLeftNum"
        app:layout_constraintTop_toTopOf="@+id/tvLeftNum" />

    <TextView
        android:id="@+id/tvAnswersProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/right_answers"
        app:layout_constraintBottom_toTopOf="@+id/progressAnswers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLeftNum"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintVertical_chainStyle="packed" />

    <ProgressBar
        android:id="@+id/progressAnswers"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:secondaryProgressTint="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/tvOption1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAnswersProgress" />

    <TextView
        android:id="@+id/tvOption1"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/tvOption4"
        app:layout_constraintEnd_toStartOf="@+id/tvOption2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/tvOption2"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/tvOption4"
        app:layout_constraintEnd_toStartOf="@+id/tvOption3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvOption1"
        tools:text="2" />

    <TextView
        android:id="@+id/tvOption3"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/tvOption4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvOption2"
        tools:text="3" />

    <TextView
        android:id="@+id/tvOption4"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvOption5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="4" />

    <TextView
        android:id="@+id/tvOption5"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvOption6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvOption4"
        tools:text="5" />

    <TextView
        android:id="@+id/tvOption6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvOption5"
        tools:text="6" />
</androidx.constraintlayout.widget.ConstraintLayout>